syntax = "proto3";

package v1;

import "api/v1/common.proto";
import "api/v1/search_service.proto";
import weak "google/api/annotations.proto";
import "storage/secret.proto";

option go_package = "./api/v1;v1";
option java_package = "io.stackrox.proto.api.v1";

// API specific objects.
////////////////////////

// A list of secrets (free of scoped information)
// Next Tag: 2
message SecretList {
  repeated storage.Secret secrets = 1;
}

// A list of secrets with their relationships.
// Next Tag: 2
message ListSecretsResponse {
  repeated storage.ListSecret secrets = 1;
}

message CountSecretsResponse {
  int32 count = 1;
}

service SecretService {
  // GetSecret returns a secret given its ID.
  rpc GetSecret(ResourceByID) returns (storage.Secret) {
    option (google.api.http) = {get: "/v1/secrets/{id}"};
  }

  // CountSecrets returns the number of secrets.
  rpc CountSecrets(RawQuery) returns (CountSecretsResponse) {
    option (google.api.http) = {get: "/v1/secretscount"};
  }

  // ListSecrets returns the list of secrets.
  rpc ListSecrets(RawQuery) returns (ListSecretsResponse) {
    option (google.api.http) = {get: "/v1/secrets"};
  }
}
